[package]
name = "dhtsearch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
gloo-net = "0.2"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"
web-sys = "0.3.63"
wasm-bindgen = "0.2.86"
url = "2.3.1"
log = "0.4.17"
wasm-logger = "0.2.0"
leptos = { version = "0.3.0" }
