[package]
name = "dhtsearch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"], optional = true }
gloo-net = "0.2"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = "0.3.63"
wasm-bindgen = { version = "0.2.86", optional = true }
url = "2.3.1"
log = "0.4.17"
wasm-logger = "0.2.0"
leptos = { version = "0.3.0", optional = true }
humansize = "2.1.3"
leptos_router = { verseion = "0.3.0", features = ["csr"] }
anyhow = "1.0.71"
thiserror = "1.0.40"

[dev-dependencies]
serde_json = "1.0"

[features]
default = ["leptos"]
yew = ["dep:yew", "dep:wasm-bindgen", "dep:wasm-bindgen-futures"]
leptos = ["dep:leptos"]
