[package]
name = "dhtsearch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"], optional = true }
gloo-net = "0.2"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = "0.3.63"
wasm-bindgen = { version = "0.2.86", optional = true }
url = "2.3.1"
log = "0.4.17"
wasm-logger = "0.2.0"
leptos = { version = "*", optional = true, features = ["nightly"] }
humansize = "2.1.3"
leptos_router = { version = "*", features = ["csr", "nightly"] }
anyhow = "1.0.71"
thiserror = "1.0.40"
base64 = "0.21.2"
icu_collator = "1.2.0"
icu_testdata = "1.2.0"

[dev-dependencies]
serde_json = "1.0"
env_logger = "*"
test-log = "*"
pretty_assertions = "1.3.0"
criterion = "0.5.1"

[features]
default = ["leptos"]
yew = ["dep:yew", "dep:wasm-bindgen", "dep:wasm-bindgen-futures"]
leptos = ["dep:leptos"]

[[bench]]
name = "benches"
harness = false